--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: xcodebuild -xcodeproj CombineExample.xcodeproj -scheme CombineExample
+      run: xcodebuild -scheme CombineExample
     - name: Run tests
       run: swift test -v
