--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: xcodebuild -scheme CombineExample -allowProvisioningUpdates
+      run: -project ./CombineExample.xcodeproj -scheme CombineExample -configuration Release build -allowProvisioningUpdates
     - name: Run tests
       run: swift test -v
