--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,8 +12,9 @@ jobs:
     runs-on: macos-latest
 
     steps:
+    - name: Checkout repository
     - uses: actions/checkout@v2
-    name: Install the Apple certificate and provisioning profile
+    - name: Install the Apple certificate and provisioning profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
